moved genres, release date, and runtime to same line on larger devices, fixed genres text wrap, changed date format

--- a/src/components/movie/Movie.css
+++ b/src/components/movie/Movie.css
@@ -22,8 +22,10 @@
 
 .movie-info-box {
   background: none;
+  display: block;
   margin-bottom: 20px;
   padding: 0;
+  white-space: normal;
 }
 
 .movie-info-box-title {
